--- a/AppCoder/templates/AppCoder/inicio.html
+++ b/AppCoder/templates/AppCoder/inicio.html
@@ -45,17 +45,17 @@
             {% endblock %}
         </div>
     </main>
-    <footer class="footerIndex bg-dark text-white py-3">
+    <footer class="footerIndex bg-success-subtle text-dark py-3">
         <div class="container p-4">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-                    <p>
-                        ☏ +54 115570 5571 <br>
-                        ✉ info@eduread.com
+            <div class="d-flex flex-row justify-content-center">
+                <div class="flex flex-column">
+                    <p><a>☏ +54 115570 5571</a>
+                    </p>
+                    <p><a>✉ info@eduread.com</a>
                     </p>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Enlaces</h5>
+                    <h5 class="text-uppercase ">Enlaces</h5>
                     <ul class="list-unstyled mb-0">
                         <li>
                             <a href="{% url 'inicio' %}">Inicio</a>
